force-app/main/default/objects/Account/fields/Account_Auto_Num__c.field-meta.xml
<CustomField>
    <fullName>Account_Auto_Num__c</fullName>
    <label>Account Auto Num</label>
    <length>30</length>
    <type>Text</type>
</CustomField>