force-app/main/default/objects/Account/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>date of account creation</description>
    <label>Created Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>