force-app/main/default/objects/Account/fields/due_Date__c.field-meta.xml
<CustomField>
    <fullName>due_Date__c</fullName>
    <formula>CreatedDate + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>due Date</label>
    <type>Date</type>
</CustomField>