force-app/main/default/objects/Account/fields/Flow_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Flow_Contact_Count__c</fullName>
    <label>Flow Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>