force-app/main/default/objects/Account/fields/Last_modified_date__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_date__c</fullName>
    <label>Last modified date</label>
    <type>DateTime</type>
</CustomField>