force-app/main/default/objects/Account/fields/long_text_field__c.field-meta.xml
<CustomField>
    <fullName>long_text_field__c</fullName>
    <label>long text field</label>
    <type>TextArea</type>
</CustomField>