force-app/main/default/objects/Account/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <formula>if((DATETIMEVALUE(Today())- CreatedDate)&gt;20,&quot;Red&quot;,if((DATETIMEVALUE(Today())- CreatedDate)&gt;10,&quot;Yellow&quot;,&quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days</label>
    <type>Text</type>
</CustomField>