force-app/main/default/objects/Account/fields/OppAmount__c.field-meta.xml
<CustomField>
    <fullName>OppAmount__c</fullName>
    <label>OppAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>