force-app/main/default/objects/Account/fields/Phone_Number_Changed__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone_Number_Changed</label>
    <type>Checkbox</type>
</CustomField>