force-app/main/default/objects/Account/validationRules/Account_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_phone</fullName>
    <active>false</active>
    <errorConditionFormula>len(Phone)&lt;9</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Account Phone should contain more than 9 characters</errorMessage>
</ValidationRule>